--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,6 @@
 @import "../components/card/card.css";
 @import "../components/board/board.css";
+@import "./deck.css";
 
 * {
     box-sizing: border-box;
@@ -15,14 +16,22 @@ button {
 }
 
 :root {
+    padding: 1em;
+    background-image: radial-gradient( circle at 100% -20%,  rgba(255,255,255,20%) 0%, rgba(255,255,255,0%) 70% );
     overflow: hidden;
     --color: black;
-    --card-width: min(9vw, 16vh);
+    --card-width: min(8vw, 16vh);
     --card-ratio: 2.5/3.5;
     --card-height: calc(var(--card-width) / (var(--card-ratio)));
     min-height: 100vh;
     max-width: 100vw;
     color-scheme: dark;
+}
+
+body {
+    gap: 1em;
+    flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .container {
