--- a/style/index.css
+++ b/style/index.css
@@ -34,6 +34,17 @@ body {
     align-items: flex-start;
 }
 
+
+@media screen and (orientation: portrait) {
+    :root {
+        --card-width: min(18vw, 10vh);
+    }
+
+    body {
+        flex-direction: column;
+    }
+}
+
 .container {
     display: flex;
 }
