--- a/style/deck.css
+++ b/style/deck.css
@@ -1,8 +1,7 @@
 #deck {
     min-width: var(--card-width);
-    min-height: var(--card-height);
+    height: var(--card-height);
     flex-direction: column-reverse;
-    position: relative;
     background: rgba(255, 255, 255, 20%);
     border-radius: .5em;
 
@@ -26,7 +25,8 @@
     }
 
     &>* {
-        transition: scale 50ms ease-in;
+        --transition-duration-ms: 1000ms;
+        transition: all var(--transition-duration-ms) ease-out, scale 50ms ease-in;
 
         &:not(:last-child) {
             margin-top: calc(var(--card-height) * -.998);
