Update timer to function with import. Includes stopping functionality.

--- a/components/board/board.html
+++ b/components/board/board.html
@@ -9,6 +9,7 @@
       <button class="logoutButton" onclick="log()">↩️Logout</button>
       <h1 class="title">Game of Spider</h1>
       <p class="time" id="timerDisplay">00:00:00</p>
+      <button class="button" id="stopButton">STOP</button>
 
     </section>
     <ul class="board container-h">
