Fixing mobile view

--- a/components/board/board.css
+++ b/components/board/board.css
@@ -64,7 +64,7 @@
 }
 
 @media screen and (orientation: portrait) {
-    .board {
+    #board {
         flex-wrap: wrap;
 
         &>.v-container {
