--- a/components/banner/banner.css
+++ b/components/banner/banner.css
@@ -1,5 +1,5 @@
 #banner {
-    align-self: center;
+    align-self: normal;
     gap: 1em;
     display: flex;
     flex-direction: row;
@@ -10,5 +10,13 @@
         text-align: center;
         font-size: 2rem;
         margin: 0;
+    }
+}
+
+@media screen and (orientation: portrait) {
+    #banner {
+        &>h1 {
+            display: none;
+        }
     }
 }
