--- a/frontend/static/components/deck/deck.css
+++ b/frontend/static/components/deck/deck.css
@@ -5,6 +5,10 @@
     background: rgba(255, 255, 255, 20%);
     border-radius: .5em;
 
+    &.dealing {
+        pointer-events: none;
+    }
+
     &:not(:disabled) {
         cursor: pointer;
     }
@@ -32,18 +36,20 @@
         --transition-duration-ms: 1000ms;
         transition: all var(--transition-duration-ms) ease-out, scale 50ms ease-in, margin 0s linear;
 
+        &:not(:last-child) {
+            margin-top: calc(var(--card-height) * -.998);
+        }
+
         &.dealing {
-            margin: 0;
+            margin-top: 0;
             position: absolute;
+            --deal-index: 0;
             --deal-row: 0;
             --x-offset: 0;
             --y-offset: 0;
             top: calc(var(--y-offset) + var(--card-height) * .2 * var(--deal-row));
             left: var(--x-offset);
-        }
-
-        &:not(:last-child) {
-            margin-top: calc(var(--card-height) * -.998);
+            z-index: var(--deal-index);
         }
     }
 }
