--- a/frontend/static/style/index.css
+++ b/frontend/static/style/index.css
@@ -3,6 +3,7 @@
 @import "../components/deck/deck.css";
 @import "../components/banner/banner.css";
 @import "../components/leaderboard/leaderboard.css";
+@import "../components/login/login.css";
 
 * {
     box-sizing: border-box;
