--- a/frontend/static/style/index.css
+++ b/frontend/static/style/index.css
@@ -4,6 +4,7 @@
 @import "../components/banner/banner.css";
 @import "../components/leaderboard/leaderboard.css";
 @import "../components/login/login.css";
+@import "../components/difficulty/difficulty.css";
 
 * {
     box-sizing: border-box;
