--- a/frontend/static/components/difficulty/difficulty.css
+++ b/frontend/static/components/difficulty/difficulty.css
@@ -1,4 +1,5 @@
 #difficulty {
+    text-shadow: 0 0 2px black;
     justify-content: space-around;
     padding: 1em;
     border-radius: 2em;
@@ -10,6 +11,7 @@
 
 
     &>button {
+        text-shadow: 0 0 2px black;
         padding: 1em;
         border-radius: 2em;
         background: rgba(255, 255, 255, 25%);
